# tbank-telebot

./: .env.example  .gitignore  Cargo.toml
src/: config.rs  main.rs
src/controllers/: health.rs  mod.rs  server.rs
src/enums/: beneficiary.rs  mod.rs  telegram.rs
src/models/: authentication.rs  chart.rs  customer.rs  mod.rs  transaction.rs
src/repositories/: mod.rs  redis_repository.rs  tbank_repository.rs
src/services/: mod.rs  register_service.rs  telegram_service.rs
