[package]
name = "tbank-telebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.0"
base64 = "0.21.0"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1.28", features = ["full"] }
tower = "0.4"
teloxide = {version = "0.12.2", features = ["auto-send", "teloxide-macros", "macros"]}
tower-http = { version = "0.4.0", features = ["cors", "auth"]}
tracing = "0.1.40"
tracing-subscriber = "0.3"
dotenv = "0.15.0"
serde_json = "1.0"
thiserror = "1.0.44"
futures-util = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
rand = "0.8.5"
reqwest = "0.11.20"
urlencoding = "2.1.3"
bb8-redis = "0.13.0"